[gd_scene load_steps=6 format=3 uid="uid://fg4ym4oapou1"]

[ext_resource type="PackedScene" uid="uid://d2gmt4pclfogo" path="res://scenes/player.tscn" id="1_dvv4q"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_wnpfd"]
[ext_resource type="PackedScene" uid="uid://cattodwcy6h47" path="res://scenes/item.tscn" id="2_bwfkv"]
[ext_resource type="PackedScene" uid="uid://03tpi2eohgxy" path="res://scenes/hud.tscn" id="3_ewdw6"]
[ext_resource type="PackedScene" uid="uid://xlcsyx7dvnfe" path="res://scenes/main_map.tscn" id="4_ucws2"]

[node name="Main" type="Node" node_paths=PackedStringArray("currentTileMap")]
script = ExtResource("1_wnpfd")
hunger = 9001
currentTileMap = NodePath("MainTileMap")
item_scene = ExtResource("2_bwfkv")

[node name="Player" parent="." instance=ExtResource("1_dvv4q")]
scale = Vector2(0.075, 0.075)
speed = 60

[node name="MainTileMap" parent="." instance=ExtResource("4_ucws2")]

[node name="HUD" parent="." instance=ExtResource("3_ewdw6")]

[node name="HungerTimer" type="Timer" parent="."]

[node name="ItemTimer" type="Timer" parent="."]

[connection signal="change_scene" from="Player" to="." method="_on_player_change_scene"]
[connection signal="timeout" from="HungerTimer" to="." method="_on_hunger_timer_timeout"]
[connection signal="timeout" from="ItemTimer" to="." method="_on_item_timer_timeout"]
